# aoc2024

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake-multi-platform.yml
day1/: day1.cpp  day1.h
day10/: day10.cpp  day10.h
day11/: day11.cpp  day11.h
day12/: day12.cpp  day12.h
day13/: day13.cpp  day13.h
day14/: day14.cpp  day14.h
day15/: day15.cpp  day15.h
day16/: day16.cpp  day16.h
day2/: day2.cpp  day2.h
day3/: day3.cpp  day3.h
day4/: day4.cpp  day4.h
day5/: day5.cpp  day5.h
day6/: day6.cpp  day6.h
day7/: day7.cpp  day7.h
day8/: day8.cpp  day8.h
day9/: day9.cpp  day9.h
tests/: test.cpp
